--- a/prod/native/libcommon/code/CMakeLists.txt
+++ b/prod/native/libcommon/code/CMakeLists.txt
@@ -16,7 +16,7 @@ add_library (${_Target}
 target_link_libraries(${_Target}
     PRIVATE CONAN_PKG::libunwind
     PRIVATE CONAN_PKG::libcurl
-
+    PRIVATE CONAN_PKG::boost
 )
 
 configure_file("elastic_otel_version.h.in" "${CMAKE_CURRENT_BINARY_DIR}/generated/elastic_otel_version.h")
